Fix touch image dragging on mobile

--- a/src/styles/pokemon-cards.css
+++ b/src/styles/pokemon-cards.css
@@ -72,13 +72,35 @@
   border-radius: inherit;
 }
 
-.image-drag-handle {
+.image-drag-surface {
+  position: absolute;
+  z-index: 5;
   cursor: grab;
-  outline: none;
+  user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: transparent;
+  overscroll-behavior: contain;
   touch-action: none;
 }
 
-.card.is-dragging-image .image-drag-handle {
+.image-drag-surface--standard {
+  top: 12.92%;
+  left: 7.12%;
+  width: 85.76%;
+  height: 38.65%;
+  border-radius: 1.3%;
+}
+
+.image-drag-surface--fullArt {
+  top: 3.26%;
+  left: 4.55%;
+  width: 90.91%;
+  height: 93.49%;
+  border-radius: 4.3%;
+}
+
+.card.is-dragging-image .image-drag-surface {
   cursor: grabbing;
 }
 
